# row-taker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_row_taker.py
.github/workflows/: ci.yml
_config/: gitconfig
_config/vscode/: launch.json  settings.json  settings.linux.json  settings.windows.json  tasks.json
docs/: ARCHITECTURE.md  RULES.md  WORKFLOW.md
src/row_taker/Network/: Net - Test.py  Net.py
src/row_taker/cli/: bot.py  main.py
src/row_taker/engine/: game.py  rules.py  state.py
src/sixnimmt/cli/: main.py
src/sixnimmt/engine/: game.py  rules.py  scoring.py  state.py
tests/: test_cli_prints_abort_message_on_ctrl_c.py  test_game_round.py  test_rules.py  test_scoring.py
tools/: run_checks.sh
